--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-.vscode/settings.json
 analyseHidro.ipynb
 analyseRHN.ipynb
 analyseTelemetrica.ipynb
+.vscode/settings.json
+analysePonto.ipynb
+PlanTrab.csv
+PlanTrabPonto.csv
