--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-analyseHidro.ipynb
+﻿analyseHidro.ipynb
 analyseRHN.ipynb
 analyseTelemetrica.ipynb
-.vscode/settings.json
 analysePonto.ipynb
 PlanTrab.csv
 PlanTrabPonto.csv
+dfCustos.csv
+dfPM.csv
+RHNR.csv
+SUREG.csv
